<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/poster"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-12dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/poster_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/example_poster"
            android:layout_marginTop="1dp" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintLeft_toRightOf="@+id/poster"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/movie_title_place_holder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vote_average_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/voter_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toRightOf="@+id/poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toLeftOf="@+id/vote_average_header"
            app:layout_constraintRight_toRightOf="@+id/vote_average_header"
            app:layout_constraintTop_toBottomOf="@+id/vote_average_header"
            tools:text="@string/voter_average_place_holder" />

        <TextView
            android:id="@+id/your_favorite_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/your_favorite_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintLeft_toRightOf="@+id/poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_average" />

        <ImageButton
            android:id="@+id/your_favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:contentDescription="@string/star_description"
            app:layout_constraintLeft_toLeftOf="@+id/your_favorite_label"
            app:layout_constraintRight_toRightOf="@+id/your_favorite_label"
            app:layout_constraintTop_toBottomOf="@+id/your_favorite_label"
            app:srcCompat="@android:drawable/btn_star_big_off"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/release_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_str"
            app:layout_constraintLeft_toLeftOf="@+id/your_favorite_btn"
            app:layout_constraintRight_toRightOf="@+id/your_favorite_btn"
            app:layout_constraintTop_toBottomOf="@+id/your_favorite_btn"
            tools:ignore="RtlHardcoded"
            app:layout_constraintHorizontal_bias="0.491" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="@+id/release_date_header"
            app:layout_constraintRight_toRightOf="@+id/release_date_header"
            app:layout_constraintTop_toBottomOf="@+id/release_date_header"
            tools:text="@string/release_date"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.514" />

        <TextView
            android:id="@+id/plot_synopsis_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/plot_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

        <TextView
            android:id="@+id/plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/synopsis_place_holder"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/plot_synopsis_header" />

    </android.support.constraint.ConstraintLayout>
</layout>