<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="movie" type="com.example.android.popularmovies.MovieDetails"/>
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trailer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/trailer_label_description"
            android:text="@string/trailer_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/horizontal_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/horizontal_line"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_header"
            app:srcCompat="@color/colorPrimary" />

        <Button
            android:id="@+id/trailer_btn_1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/trailer_button_1_text"
            android:onClick="trailer1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line" />

        <Button
            android:id="@+id/trailer_btn_2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailer_button_2_text"
            android:onClick="trailer2"
            app:layout_constraintBottom_toBottomOf="@+id/trailer_btn_1"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintLeft_toRightOf="@+id/trailer_btn_1"
            app:layout_constraintRight_toLeftOf="@+id/trailer_btn_3"
            app:layout_constraintTop_toTopOf="@+id/trailer_btn_1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/trailer_btn_3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/trailer_button_3_text"
            android:onClick="trailer3"
            app:layout_constraintBottom_toBottomOf="@+id/trailer_btn_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/trailer_btn_2"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/horizontal_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/horizontal_line"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_btn_2"
            app:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/reviews_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/review_label_description"
            android:text="@string/reviews_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line_2" />

        <TextView
            android:id="@+id/author_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_title"
            tools:ignore="RtlHardcoded"
            tools:text="@{movie.author1}" />

        <TextView
            android:id="@+id/review_1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintLeft_toLeftOf="@+id/author_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_1"
            tools:text="@{movie.review1}" />

        <ImageView
            android:id="@+id/horizontal_line3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/horizontal_line"
            app:layout_constraintBottom_toTopOf="@+id/author_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_1"
            app:srcCompat="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/review_2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toLeftOf="@+id/author_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_2"
            tools:text="@{movie.review2}" />

        <TextView
            android:id="@+id/author_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_1"
            tools:ignore="RtlHardcoded"
            tools:text="@{movie.author2}" />

        <ImageView
            android:id="@+id/horizonal_line_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/horizontal_line"
            app:layout_constraintBottom_toTopOf="@+id/author_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_2"
            app:srcCompat="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/author_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_2"
            tools:ignore="RtlHardcoded"
            tools:text="@{movie.author3}" />

        <TextView
            android:id="@+id/review_3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toLeftOf="@+id/author_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_3"
            tools:text="@{movie.review3}"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

    </android.support.constraint.ConstraintLayout>

</layout>